Fixed a mobile alignment issue

--- a/style_v4.css
+++ b/style_v4.css
@@ -503,7 +503,7 @@ footer {
 
     .landing .column-2 {
         width: auto; 
-        margin-bottom: 3rem; 
+        margin-bottom: 6rem; 
     }
 
     .fieldset {
